--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "## Learning Goals",
+  "main": "babel.config.js",
+  "author": "",
+  "license": "ISC"
 }
